AC_INIT([mod_ip_count], [2.2.0])
OOO_CONFIG_NICE(config.nice)
AC_PREREQ(2.53)
dnl AC_CONFIG_SRCDIR([memcache/apr_memcache.c])
AM_MAINTAINER_MODE
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER([mod_ip_count.h:config.in])

# Prevent AC_PROG_LIBTOOL from checking for C++
AC_DEFUN([AC_PROG_CXX], [])

AC_PROG_CC
AC_PROG_LD
AC_PROG_INSTALL
AM_PROG_LIBTOOL


AP_VERSION=2.2.0
AP24_VERSION=2.4.0
CHECK_APACHE(2.0.0,$AP_VERSION,$AP24_VERSION,
   :,:,:,
   AC_MSG_ERROR([*** Apache version $AP_VERSION not found!])
)

dnl MODULE_CFLAGS="${APXS_CFLAGS} ${AP_INCLUDES} ${APR_INCLUDES} ${APU_INCLUDES} -Imemcache"
dnl MODULE_LIBS="${APR_LIBS} ${APU_LIBS}"

dnl AC_SUBST(MODULE_CFLAGS)
dnl AC_SUBST(MODULE_LIBS)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
